--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "author": "Austin Cunningham",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
+    "local-cors-proxy": "^1.1.0",
     "openid-client": "^5.1.3",
     "passport": "^0.5.2"
   }
